--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
 	"description": "",
 	"main": "index.js",
 	"scripts": {
-		"start": "cross-env NODE_ENV=development webpack-dev-server",
+		"start": "cross-env NODE_ENV=development webpack serve --client-progress  ",
 		"build": "cross-env NODE_ENV=production webpack"
 	},
 	"keywords": [],
@@ -15,14 +15,23 @@
 		"@babel/plugin-transform-runtime": "^7.16.4",
 		"@babel/preset-env": "^7.16.4",
 		"babel-loader": "^8.2.3",
+		"clean-webpack-plugin": "^4.0.0",
 		"cross-env": "^7.0.3",
+		"css-loader": "^6.5.1",
 		"html-webpack-plugin": "^5.5.0",
+		"less-loader": "^10.2.0",
+		"style-loader": "^3.3.1",
 		"webpack": "^5.64.2",
 		"webpack-cli": "^4.9.1",
 		"webpack-dev-server": "^4.5.0"
 	},
 	"dependencies": {
+		"@babel/plugin-proposal-class-properties": "^7.16.0",
+		"@babel/preset-react": "^7.16.0",
 		"@babel/runtime": "^7.16.3",
-		"@babel/runtime-corejs3": "^7.16.3"
+		"@babel/runtime-corejs3": "^7.16.3",
+		"react": "^17.0.2",
+		"react-dom": "^17.0.2",
+		"react-router-dom": "^6.0.2"
 	}
 }
