--- a/package.json
+++ b/package.json
@@ -1,37 +1,36 @@
 {
-	"name": "webpack_test",
-	"version": "1.0.0",
-	"description": "",
-	"main": "index.js",
-	"scripts": {
-		"start": "cross-env NODE_ENV=development webpack serve --client-progress  ",
-		"build": "cross-env NODE_ENV=production webpack"
-	},
-	"keywords": [],
-	"author": "",
-	"license": "ISC",
-	"devDependencies": {
-		"@babel/core": "^7.16.0",
-		"@babel/plugin-transform-runtime": "^7.16.4",
-		"@babel/preset-env": "^7.16.4",
-		"babel-loader": "^8.2.3",
-		"clean-webpack-plugin": "^4.0.0",
-		"cross-env": "^7.0.3",
-		"css-loader": "^6.5.1",
-		"html-webpack-plugin": "^5.5.0",
-		"less-loader": "^10.2.0",
-		"style-loader": "^3.3.1",
-		"webpack": "^5.64.2",
-		"webpack-cli": "^4.9.1",
-		"webpack-dev-server": "^4.5.0"
-	},
-	"dependencies": {
-		"@babel/plugin-proposal-class-properties": "^7.16.0",
-		"@babel/preset-react": "^7.16.0",
-		"@babel/runtime": "^7.16.3",
-		"@babel/runtime-corejs3": "^7.16.3",
-		"react": "^17.0.2",
-		"react-dom": "^17.0.2",
-		"react-router-dom": "^6.0.2"
-	}
+  "name": "webpack_test",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
+  "scripts": {
+    "start": "cross-env NODE_ENV=development webpack serve --client-progress  ",
+    "build": "cross-env NODE_ENV=production webpack"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "devDependencies": {
+    "@babel/core": "^7.16.0",
+    "@babel/plugin-transform-runtime": "^7.16.4",
+    "@babel/preset-env": "^7.16.4",
+    "@babel/preset-react": "^7.16.0",
+    "babel-loader": "^8.2.3",
+    "clean-webpack-plugin": "^4.0.0",
+    "cross-env": "^7.0.3",
+    "css-loader": "^6.5.1",
+    "html-webpack-plugin": "^5.5.0",
+    "less": "^4.1.2",
+    "less-loader": "^10.2.0",
+    "mini-css-extract-plugin": "^2.4.5",
+    "style-loader": "^3.3.1",
+    "webpack": "^5.64.2",
+    "webpack-cli": "^4.9.1",
+    "webpack-dev-server": "^4.5.0"
+  },
+  "dependencies": {
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-router-dom": "^6.0.2"
+  }
 }
