--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "author": "",
   "license": "ISC",
   "scripts": {
-    "start": "cross-env NODE_ENV=development webpack serve --client-progress  ",
+    "start": "cross-env NODE_ENV=development webpack serve --client-progress",
     "build": "cross-env NODE_ENV=production webpack"
   },
   "devDependencies": {
@@ -16,7 +16,6 @@
     "@babel/preset-env": "^7.16.4",
     "@babel/preset-react": "^7.16.0",
     "babel-loader": "^8.2.3",
-    "clean-webpack-plugin": "^4.0.0",
     "cross-env": "^7.0.3",
     "css-loader": "^6.5.1",
     "eslint": "^8.4.1",
@@ -33,6 +32,7 @@
     "webpack-dev-server": "^4.5.0"
   },
   "dependencies": {
+    "@babel/runtime-corejs3": "^7.16.5",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.0.2"
