- chore: package name
Signed-off-by: Wanp <wanpan96@163.com>

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "webpack_test",
+  "name": "project_common_config",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
