--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
   },
   "devDependencies": {
     "@babel/core": "^7.16.0",
-    "@babel/plugin-transform-runtime": "^7.16.4",
     "@babel/preset-env": "^7.16.4",
     "@babel/preset-react": "^7.16.0",
     "babel-loader": "^8.2.3",
@@ -32,7 +31,7 @@
     "webpack-dev-server": "^4.5.0"
   },
   "dependencies": {
-    "@babel/runtime-corejs3": "^7.16.5",
+    "core-js": "^3.20.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.0.2"
