--- a/package.json
+++ b/package.json
@@ -7,15 +7,14 @@
   "author": "",
   "license": "ISC",
   "scripts": {
-    "start": "cross-env NODE_ENV=development webpack serve --client-progress",
-    "build": "cross-env NODE_ENV=production webpack"
+    "start": "webpack serve --mode=development",
+    "build": "webpack serve --mode=production"
   },
   "devDependencies": {
     "@babel/core": "^7.16.0",
     "@babel/preset-env": "^7.16.4",
     "@babel/preset-react": "^7.16.0",
     "babel-loader": "^8.2.3",
-    "cross-env": "^7.0.3",
     "css-loader": "^6.5.1",
     "eslint": "^8.4.1",
     "eslint-plugin-prettier": "^4.0.0",
