--- a/package.json
+++ b/package.json
@@ -1,11 +1,14 @@
 {
-  "name": "project_common_config",
+  "name": "wanp-project",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "description": "react项目模板",
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "main": "index.js",
+  "bin": {
+    "wanp": "./index.js"
+  },
   "scripts": {
     "start": "webpack serve --mode=development",
     "build": "webpack --mode=production"
@@ -13,26 +16,15 @@
   "devDependencies": {
     "@babel/core": "^7.16.0",
     "@babel/preset-env": "^7.16.4",
-    "@babel/preset-react": "^7.16.0",
-    "babel-loader": "^8.2.3",
-    "css-loader": "^6.5.1",
     "eslint": "^8.4.1",
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-react": "^7.27.1",
-    "html-webpack-plugin": "^5.5.0",
-    "less": "^4.1.2",
-    "less-loader": "^10.2.0",
-    "mini-css-extract-plugin": "^2.4.5",
-    "prettier": "2.5.1",
-    "style-loader": "^3.3.1",
-    "webpack": "^5.64.2",
-    "webpack-cli": "^4.9.1",
-    "webpack-dev-server": "^4.5.0"
+    "prettier": "^2.5.1"
   },
   "dependencies": {
+    "commander": "^8.3.0",
     "core-js": "^3.20.1",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-router-dom": "^6.0.2"
+    "fs-extra": "^10.0.0",
+    "inquirer": "^8.2.0"
   }
 }
