--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "wp-react-template-cli",
+  "name": "wp-rt-cli",
   "version": "1.0.0",
   "description": "react项目模板",
   "keywords": [
