--- a/template/package.json
+++ b/template/package.json
@@ -12,6 +12,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.16.0",
+    "@babel/plugin-transform-runtime": "^7.17.0",
     "@babel/preset-env": "^7.16.4",
     "@babel/preset-react": "^7.16.0",
     "@types/express": "^4.17.13",
@@ -34,10 +35,10 @@
     "webpack-dev-server": "^4.5.0"
   },
   "dependencies": {
-    "core-js": "^3.20.1",
+    "@babel/runtime": "^7.17.2",
+    "core-js": "3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-router-dom": "^6.0.2",
-    "regenerator-runtime": "^0.13.9"
+    "react-router-dom": "^6.0.2"
   }
 }
