--- a/template/react-ts/package.json
+++ b/template/react-ts/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "project_common_config",
+  "name": "react-app-ts",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
