--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "react-tp-cli",
   "version": "1.2.0",
   "description": "react项目模板",
+  "private": true,
+  "workspaces": [
+    "template/*"
+  ],
   "keywords": [
     "react",
     "react-template"
