--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "type": "git",
     "url": "https://github.com/wanpan11/react-template-cli.git"
   },
-  "scripts": {},
+  "scripts": {
+    "lint": "eslint '*/**/*.{js,jsx,ts,tsx}'"
+  },
   "devDependencies": {
     "eslint": "^8.4.1",
     "eslint-plugin-prettier": "^4.0.0",
