--- a/package.json
+++ b/package.json
@@ -2,10 +2,6 @@
   "name": "react-tp-cli",
   "version": "1.2.0",
   "description": "react项目模板",
-  "private": true,
-  "workspaces": [
-    "template/*"
-  ],
   "keywords": [
     "react",
     "react-template"
@@ -21,12 +17,19 @@
     "url": "https://github.com/wanpan11/react-template-cli.git"
   },
   "scripts": {
-    "lint": "eslint '*/**/*.{js,jsx,ts,tsx}'"
+    "lint": "eslint --ext .js,.jsx,ts,tsx ./"
   },
   "devDependencies": {
+    "@types/react": "^17.0.38",
+    "@types/react-dom": "^17.0.11",
+    "react": "^17.0.2",
+    "typescript": "^4.5.4",
     "eslint": "^8.4.1",
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-react": "^7.27.1",
+    "eslint-plugin-react-hooks": "^4.3.0",
+    "@typescript-eslint/eslint-plugin": "^5.8.0",
+    "@typescript-eslint/parser": "^5.8.0",
     "prettier": "^2.5.1"
   },
   "dependencies": {
