--- a/template/react-ts/package.json
+++ b/template/react-ts/package.json
@@ -43,10 +43,8 @@
   "dependencies": {
     "@babel/runtime": "^7.17.2",
     "core-js": "3",
-    "moment": "^2.29.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-router-dom": "^6.0.2",
-    "tdesign-react": "^0.28.0"
+    "react-router-dom": "^6.0.2"
   }
 }
