--- a/template/react-ts/package.json
+++ b/template/react-ts/package.json
@@ -12,13 +12,13 @@
     "dev:build": "webpack --mode=development"
   },
   "devDependencies": {
-    "@types/react": "^17.0.38",
-    "@types/react-dom": "^17.0.11",
     "@babel/core": "^7.16.0",
     "@babel/plugin-transform-runtime": "^7.17.0",
     "@babel/preset-env": "^7.16.4",
     "@babel/preset-react": "^7.16.0",
     "@babel/preset-typescript": "^7.16.5",
+    "@types/react": "^17.0.38",
+    "@types/react-dom": "^17.0.11",
     "@typescript-eslint/eslint-plugin": "^5.8.0",
     "@typescript-eslint/parser": "^5.8.0",
     "babel-loader": "^8.2.3",
@@ -37,6 +37,7 @@
     "typescript": "^4.5.4",
     "url-loader": "^4.1.1",
     "webpack": "^5.64.2",
+    "webpack-bundle-analyzer": "^4.6.1",
     "webpack-cli": "^4.9.1",
     "webpack-dev-server": "^4.5.0"
   },
