--- a/template/react/package.json
+++ b/template/react/package.json
@@ -32,6 +32,7 @@
     "style-loader": "^3.3.1",
     "url-loader": "^4.1.1",
     "webpack": "^5.64.2",
+    "webpack-bundle-analyzer": "^4.6.1",
     "webpack-cli": "^4.9.1",
     "webpack-dev-server": "^4.5.0"
   },
