--- a/template/react-ts/package.json
+++ b/template/react-ts/package.json
@@ -7,9 +7,9 @@
   "author": "",
   "license": "ISC",
   "scripts": {
-    "start": "webpack serve --mode=development",
-    "build": "webpack --mode=production",
-    "dev:build": "webpack --mode=development"
+    "start": "cross-env NODE_ENV=development webpack serve --config ./scripts/webpack.config.js --mode=development",
+    "build": "cross-env NODE_ENV=production webpack --config ./scripts/webpack.config.js --mode=production",
+    "dev:build": "cross-env NODE_ENV=development webpack --config ./scripts/webpack.config.js --mode=development"
   },
   "devDependencies": {
     "@babel/core": "^7.16.0",
@@ -17,17 +17,19 @@
     "@babel/preset-env": "^7.16.4",
     "@babel/preset-react": "^7.16.0",
     "@babel/preset-typescript": "^7.16.5",
+    "@types/node": "^18.14.2",
     "@types/react": "^17.0.38",
     "@types/react-dom": "^17.0.11",
     "@typescript-eslint/eslint-plugin": "^5.8.0",
     "@typescript-eslint/parser": "^5.8.0",
     "babel-loader": "^8.2.3",
+    "cross-env": "^7.0.3",
     "css-loader": "^6.5.1",
+    "dotenv": "^16.0.3",
     "eslint": "^8.4.1",
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-react": "^7.27.1",
     "eslint-plugin-react-hooks": "^4.3.0",
-    "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.5.0",
     "less": "^4.1.2",
     "less-loader": "^10.2.0",
@@ -35,7 +37,6 @@
     "prettier": "2.5.1",
     "style-loader": "^3.3.1",
     "typescript": "^4.5.4",
-    "url-loader": "^4.1.1",
     "webpack": "^5.64.2",
     "webpack-bundle-analyzer": "^4.6.1",
     "webpack-cli": "^4.9.1",
