--- a/template/react-ts/tsconfig.json
+++ b/template/react-ts/tsconfig.json
@@ -17,10 +17,15 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": true,
-    "jsx": "react"
+    "jsx": "react",
+    "baseUrl": ".",
+    "paths": {
+      "@/*": [
+        "src/*"
+      ]
+    }
   },
   "include": [
-    "src",
-    "index.d.ts"
+    "src"
   ]
 }
