--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-tp-cli",
-  "version": "1.2.7",
+  "version": "1.2.0",
   "description": "react项目模板",
   "keywords": [
     "react",
@@ -32,7 +32,8 @@
     "commander": "^8.3.0",
     "fs-extra": "^10.0.0",
     "inquirer": "^8.2.0",
-    "ora": "^1.2.0"
+    "ora": "^1.2.0",
+    "pkg-updater": "^1.0.4"
   },
   "lint-staged": {
     "*.{js,jsx,ts,tsx}": [
