--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "wanp11",
   "license": "ISC",
   "main": "index.js",
+  "type": "module",
   "bin": {
     "rt": "./index.js"
   },
@@ -21,24 +22,36 @@
   },
   "scripts": {
     "lint": "eslint --ext .js,.jsx,ts,tsx ./",
+    "build": "rollup --config ./rollup.config.js --watch",
     "prepare": "husky install"
   },
   "devDependencies": {
+    "@rollup/plugin-json": "^6.0.0",
+    "@rollup/plugin-typescript": "^11.0.0",
+    "@types/fs-extra": "^11.0.1",
+    "@types/inquirer": "^9.0.3",
+    "@types/node": "^18.15.3",
+    "@typescript-eslint/eslint-plugin": "^5.55.0",
+    "@typescript-eslint/parser": "^5.55.0",
     "eslint": "^8.21.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.2.1",
     "husky": "^8.0.3",
     "lint-staged": "^13.1.2",
-    "prettier": "2.7.1"
+    "prettier": "2.7.1",
+    "rollup": "^3.19.1",
+    "tslib": "^2.5.0"
   },
   "dependencies": {
+    "axios": "^1.3.4",
+    "boxen": "^7.0.2",
     "commander": "^8.3.0",
+    "dayjs": "^1.11.7",
     "fs-extra": "^10.0.0",
     "inquirer": "^8.2.0",
     "node-stream-zip": "^1.15.0",
-    "ora": "^1.2.0",
-    "pkg-updater": "^1.0.4",
-    "request": "^2.88.2"
+    "ora": "^6.1.2",
+    "typescript": "^5.0.2"
   },
   "lint-staged": {
     "*.{js,jsx,ts,tsx}": [
