--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
     "react-template",
     "react-admin",
     "template",
-    "admin"
+    "admin",
+    "react-admin",
+    "webpack",
+    "vite"
   ],
   "author": "wanp11",
   "license": "ISC",
