--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
   "dependencies": {
     "axios": "^1.3.4",
     "boxen": "^7.0.2",
+    "chalk": "^5.3.0",
     "commander": "^8.3.0",
     "dayjs": "^1.11.7",
     "fs-extra": "^10.0.0",
