--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
   "scripts": {
     "lint": "eslint --ext .js,.jsx,ts,tsx ./ && tsc --noEmit",
     "build": "rollup --config ./rollup.config.js --watch",
-    "test": "node index.js init",
+    "test": "tsx ./src/main.ts init",
     "prepare": "husky install"
   },
   "devDependencies": {
@@ -50,7 +50,8 @@
     "lint-staged": "^13.1.2",
     "prettier": "2.7.1",
     "rollup": "^3.19.1",
-    "tslib": "^2.5.0"
+    "tslib": "^2.5.0",
+    "tsx": "^4.16.2"
   },
   "dependencies": {
     "axios": "^1.3.4",
